Add diceWatcher client app and adhoc https to harmonyServer

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -470,6 +470,18 @@
     "    def empty(self):\n",
     "        return sum([change.changeType is None for change in self.changeSet.values()]) == len(self.changeSet)\n",
     "\n",
+    "    @property\n",
+    "    def changeType(self):\n",
+    "        changeTypes = [change.changeType is not None for change in self.changeSet.values()]\n",
+    "        if [c == \"delete\" for c in changeTypes]:\n",
+    "            return \"delete\"\n",
+    "        elif \"move\" in changeTypes or (\"add\" in changeTypes and \"delete\" in changeTypes):\n",
+    "            return \"move\"\n",
+    "        elif [c == \"add\" for c in changeTypes]:\n",
+    "            return \"add\"\n",
+    "        else:\n",
+    "            raise Exception(\"Unrecognized changeType\")\n",
+    "        \n",
     "    def __eq__(self, other):\n",
     "        if other is None:\n",
     "            return False\n",
@@ -827,11 +839,9 @@
     "class CaptureMachine:\n",
     "    \"\"\" Camera Capture State Machine \"\"\"\n",
     "    states = [\"idle\", \"unstable\", \"classify\"]\n",
-    "    modes = [\"passive\", \"track\", \"calibrate\"]\n",
     "    observationThreshold = 3\n",
     "    def __init__(self, captureConfiguration: CaptureConfiguration):\n",
     "        self.cc = captureConfiguration\n",
-    "        self.mode = \"passive\"\n",
     "        self.state = \"idle\"\n",
     "        self.cc.capture()\n",
     "        self.cc.setBase()\n",
@@ -952,29 +962,37 @@
     "            image = cv2.drawContours(image, [hull], -1, (255), -1)\n",
     "        return image[y:y+h, x:x+w]\n",
     "    \n",
-    "    def cycle(self):\n",
+    "    def cycle(self,\n",
+    "              passive=False,\n",
+    "              calibrateToObject=False, \n",
+    "              expectAdd=False,\n",
+    "              expectMove=False,\n",
+    "              expectDelete=False\n",
+    "    ):\n",
     "        try:\n",
     "            print(f\"Starting Cycle {self.cycleCounter:5} -- {self}\")\n",
     "            nextState = \"idle\"\n",
     "            self.cc.capture()\n",
     "            changes = self.referenceFrameDeltas()\n",
     "            classification = None\n",
-    "            if self.mode == \"passive\" or changes.empty:\n",
+    "            if passive or changes.empty:\n",
     "                self.cc.setReference()\n",
     "            else:\n",
     "                nextState = \"unstable\"\n",
     "                if changes == self.lastChanges:  \n",
     "                    nextState = \"classify\"\n",
     "                    classification = self.classifyChanges(changes)\n",
-    "                    if classification == self.lastClassification:\n",
-    "                        nextState = \"idle\"\n",
+    "                    if self.state == \"classify\" and classification == self.lastClassification:\n",
     "                        try:\n",
-    "                            if self.mode == \"track\":\n",
-    "                                self.commitChanges(classification)\n",
-    "                            elif self.mode == \"calibrate\":\n",
+    "                            assert (\n",
+    "                                (classification.changeType == \"add\" and expectAdd) or\n",
+    "                                (classification.changeType == \"delete\" and expectDelete) or\n",
+    "                                (classification.changeType == \"move\" and expectMove)\n",
+    "                            ), f\"Unexpected change type: {classification.changeType}\"\n",
+    "                            nextState = \"idle\"\n",
+    "                            self.commitChanges(classification)\n",
+    "                            if calibrateToObject:\n",
     "                                self.calibrateToObject(classification)\n",
-    "                            else:\n",
-    "                                raise Exception(\"Unrecognized State\")\n",
     "                            self.cc.setReference()\n",
     "                        except AssertionError as ae:\n",
     "                            print(f\"Failed Classification: {ae}\")\n",
@@ -989,6 +1007,8 @@
     "            print(\"CYCLE FAILURE!!!\")\n",
     "            print(format_exc())\n",
     "            raise\n",
+    "\n",
+    "        return (nextState, classification)\n",
     "    \n",
     "    def trackingMode(self):\n",
     "        self.mode = \"track\"\n",
