reset config; fix str dice name bug; resize cam images to 1920x1080

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -438,6 +438,7 @@
     "                resp = requests.get(self.address, stream=True).raw\n",
     "                image = np.asarray(bytearray(resp.read()), dtype=\"uint8\")\n",
     "                image = cv2.imdecode(image, cv2.IMREAD_COLOR)\n",
+    "                image = cv2.resize(image, (1920, 1080))\n",
     "                if self.rotate:\n",
     "                    image = cv2.rotate(image, cv2.ROTATE_90_CLOCKWISE)\n",
     "                if image is not None:\n",
