Added minimum processing time to classification; tracked object delete

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -528,7 +528,7 @@
     "                               key=lambda x: x.size if x is not None else 0)[0]\n",
     "        except:\n",
     "            print(\"Faield to build TrackedObject\")\n",
-    "            from IPython import embed; embed()\n",
+    "            raise\n",
     "\n",
     "    def __repr__(self):\n",
     "        changeSet = {camName: cS for camName, cS in self.changeSet.items() if cS is not None and cS.changeType not in [None, 'delete']}\n",
@@ -599,7 +599,6 @@
     "                otherPts = [op for op in triPts if not (pt == op).all()]\n",
     "            except:\n",
     "                print(\"Failed triangle to square\")\n",
-    "                from IPython import embed; embed()\n",
     "                raise\n",
     "            angles[idx] = cls.getAngle(pt, *otherPts)\n",
     "\n",
