Function observer configurator and calibrator

--- a/observer/CalibratedObserver.ipynb
+++ b/observer/CalibratedObserver.ipynb
@@ -291,21 +291,22 @@
    "source": [
     "class CalibratedCaptureConfiguration(CaptureConfiguration):\n",
     "    def buildConfiguration(self):\n",
-    "        config = super().jsonConfiguration()\n",
-    "        config['rsc'] = [[cN, \n",
-    "                         [[a.tolist() if type(a) != list else a for a in coordList[0]],\n",
-    "                          [a.tolist() if type(a) != list else a for a in coordList[1]]]]\n",
-    "                        for cN, coordList in self.rsc.realCamSpacePairs]\n",
+    "        config = super().buildConfiguration()\n",
+    "        if self.rsc is not None:\n",
+    "            config['rsc'] = [[cN, \n",
+    "                             [[a.tolist() if type(a) != list else a for a in coordList[0]],\n",
+    "                              [a.tolist() if type(a) != list else a for a in coordList[1]]]]\n",
+    "                            for cN, coordList in self.rsc.realCamSpacePairs]\n",
     "        return config\n",
     "\n",
     "    def loadConfiguration(self):\n",
     "        super().loadConfiguration()\n",
     "        config = self.readConfigFile()\n",
-    "        rscDef = config.get(\"rsc\")\n",
-    "        if rscDef is not None:\n",
+    "        self.rsc = config.get(\"rsc\", None)\n",
+    "        if self.rsc is not None:\n",
     "            self.rsc = [\n",
     "                [cN, [[np.array(pt, dtype=\"int32\") for pt in cL] for cL in coordList]]\n",
-    "                for cN, coordList in camDef]\n",
+    "                for cN, coordList in self.rsc]\n",
     "            self.rsc = RealSpaceConverter(self.rsc)\n",
     "  \n",
     "    def objectToHull(self, obj: TrackedObject, color=(255, 255, 255)):\n",
@@ -335,6 +336,8 @@
     "\n",
     "    def buildMiniMap(self, yellowObjects=None, blueObjects=None, greenObjects=None):\n",
     "        image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
+    "        if self.rsc is None:\n",
+    "            return image\n",
     "        try:\n",
     "            if self.realSpaceContours is None:\n",
     "                self.realSpaceContours = self.rsc.cameraRealSpaceOverlap(self.cameras)\n",
@@ -385,14 +388,6 @@
     "    def __init__(self, config: CalibratedCaptureConfiguration):\n",
     "        super().__init__(config)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94169131-60e2-4b5e-aeb5-7c6895015bd9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
