Feature complete Observer -- object tracking, movement measurement, distance between objects

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -681,7 +681,7 @@
     "                                if cs is not None and cs.changeType != \"delete\"],\n",
     "                               key=lambda x: x.size if x is not None else 0)[0]\n",
     "        except:\n",
-    "            print(\"Faield to build TrackedObject\")\n",
+    "            print(\"Failed to build TrackedObject\")\n",
     "            raise\n",
     "\n",
     "    def __repr__(self):\n",
@@ -914,8 +914,7 @@
     "            print(\"CYCLE FAILURE!!!\")\n",
     "            print(format_exc())\n",
     "            raise\n",
-    "\n",
-    "        return (nextState, classification)\n",
+    "        return None\n",
     "    \n",
     "    def trackMode(self):\n",
     "        self.mode = \"track\"\n",
