fix name tracking bug; add divider lines to object table

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -832,6 +832,7 @@
     "        try:\n",
     "            existingIndex = self.memory.index(objDef.previousVersion())\n",
     "            print(f\"Updating Memory {existingIndex}\")\n",
+    "            objDef.oid = self.memory[existingIndex].oid\n",
     "            self.memory[existingIndex] = objDef\n",
     "        except ValueError:\n",
     "            print(f\"New Memory\")\n",
