Dynamic mode control button

--- a/observer/Observer.ipynb
+++ b/observer/Observer.ipynb
@@ -910,12 +910,15 @@
     "            self.cycleCounter += 1\n",
     "            self.lastChanges = changes\n",
     "            self.lastClassification = classification\n",
+    "            return None\n",
     "        except:\n",
     "            from traceback import format_exc\n",
     "            print(\"CYCLE FAILURE!!!\")\n",
     "            print(format_exc())\n",
-    "            raise\n",
-    "        return None\n",
+    "            self.passiveMode()\n",
+    "            self.lastChanges = None\n",
+    "            self.lastClassification = None\n",
+    "            return \"Cycle Failure\"\n",
     "    \n",
     "    def trackMode(self):\n",
     "        self.mode = \"track\"\n",
