Object tracker filter

--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -105,11 +105,7 @@
    "outputs": [],
    "source": [
     "class Structure(QuantumSystem.HyperSystem):\n",
-    "    systems = [XYLocation, ArmorSystem, Faction]\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def height(cls, structureId):\n",
-    "        return 5\n",
+    "    systems = [XYLocation, Elevation, ArmorSystem, Faction]\n",
     "    \n",
     "    @classmethod\n",
     "    def buildStructureFactory(cls, systemDefaults):\n",
@@ -128,33 +124,39 @@
     "StructureFactories = {\n",
     "    \"Apartment Tower\": Structure.buildStructureFactory([\n",
     "        json.dumps([0, 0]),  # XYLocation System\n",
+    "        5,  # Elevation System\n",
     "        [\"4\", \"2\"],  # Armor System\n",
-    "        \"Unaligned\"\n",
+    "        \"Unaligned\"  # Faction System\n",
     "    ]),\n",
     "    \"Foundry\": Structure.buildStructureFactory([\n",
     "        json.dumps([0, 0]),  # XYLocation System\n",
+    "        5,  # Elevation System\n",
     "        [\"8\", \"6\"],  # Armor System\n",
-    "        \"Unaligned\"\n",
+    "        \"Unaligned\"  # Faction System\n",
     "    ]),\n",
     "    \"Factory\": Structure.buildStructureFactory([\n",
     "        json.dumps([0, 0]),  # XYLocation System\n",
+    "        5,  # Elevation System\n",
     "        [\"7\", \"5\"],  # Armor System\n",
-    "        \"Unaligned\"\n",
+    "        \"Unaligned\"  # Faction System\n",
     "    ]),\n",
     "    \"Office Tower\": Structure.buildStructureFactory([\n",
     "        json.dumps([0, 0]),  # XYLocation System\n",
+    "        5,  # Elevation System\n",
     "        [\"5\", \"4\"],  # Armor System\n",
-    "        \"Unaligned\"\n",
+    "        \"Unaligned\"  # Faction System\n",
     "    ]),\n",
     "    \"Warehouse\": Structure.buildStructureFactory([\n",
     "        json.dumps([0, 0]),  # XYLocation System\n",
+    "        5,  # Elevation System\n",
     "        [\"7\", \"4\"],  # Armor System\n",
-    "        \"Unaligned\"\n",
+    "        \"Unaligned\"  # Faction System\n",
     "    ]),\n",
     "    \"Road\": Structure.buildStructureFactory([\n",
     "        json.dumps([0, 0]),  # XYLocation System\n",
+    "        5,  # Elevation System\n",
     "        [\"1\", \"0\"],  # Armor System\n",
-    "        \"Unaligned\"\n",
+    "        \"Unaligned\"  # Faction System\n",
     "    ])\n",
     "}"
    ]
@@ -463,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
