--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -754,8 +754,7 @@
     "        try:\n",
     "            existingIndex = self.memory.index(objDef.previousVersion())\n",
     "            print(f\"Updating Memory {existingIndex}\")\n",
-    "            objDef.oid = self.memory[existingIndex].oid\n",
-    "            self.memory[existingIndex] = objDef\n",
+    "            self.memory[existingIndex].update(objDef)\n",
     "        except ValueError:\n",
     "            print(f\"New Memory\")\n",
     "            self.memory.append(objDef)\n",
