Remove camera baseFrame

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -33,7 +33,39 @@
    "id": "55ddf209-272f-48a8-a287-0c61028b4b10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class GameState:\n",
+    "    states = [\"Add\", \"Movement\", \"Declare\", \"Resolve\"]\n",
+    "    state = \"Add\"\n",
+    "    round = 0\n",
+    "    declaredActions = {}\n",
+    "\n",
+    "    @classmethod\n",
+    "    def reset(cls):\n",
+    "        cls.round = 0\n",
+    "        cls.state = \"Add\"\n",
+    "        cls.declaredActions = {}\n",
+    "\n",
+    "    @classmethod\n",
+    "    def nextState(cls, currentState=None):\n",
+    "        if currentState is not None:\n",
+    "            assert currentState == cls.state, \"GameState mismatch. Cannot progress in this manner\"\n",
+    "        currentState = cls.state\n",
+    "        newState = currentState\n",
+    "        if newState == \"Add\":\n",
+    "            newState = \"Movement\"\n",
+    "            cls.movements = []\n",
+    "        elif newState == \"Movement\":\n",
+    "            newState = \"Declare\"\n",
+    "            cls.declaredActions = {}\n",
+    "        elif newState == \"Declare\":\n",
+    "            newState = \"Resolve\"\n",
+    "        elif newState == \"Resolve\":\n",
+    "            newState = \"Movement\"\n",
+    "            cls.declaredActions = {}\n",
+    "            cls.round += 1\n",
+    "        cls.state = newState"
+   ]
   }
  ],
  "metadata": {
