Create clipImage utility function

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -23,8 +23,7 @@
    "source": [
     "class HarmonyMachine(CalibratedObserver):\n",
     "    def commitChanges(self, trackedObj):\n",
-    "        super().commitChanges(trackedObj)\n",
-    "        # update lastObj with movement modifier"
+    "        super().commitChanges(trackedObj)"
    ]
   },
   {
