Implement footprint altering ui; change visual margin

--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -457,8 +457,7 @@
     "                else:\n",
     "                    contourOverlap = cv2.bitwise_or(contourOverlap, shiftedFilledContour)\n",
     "        contours, _ = cv2.findContours(contourOverlap, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "        hull = cv2.convexHull(contours[-1])\n",
-    "        return hull\n",
+    "        return contours[-1]\n",
     "\n",
     "    def buildMiniMap(self, yellowObjects=None, blueObjects=None, greenObjects=None):\n",
     "        image = np.zeros([1200, 1200, 3], dtype=\"uint8\")\n",
