--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -169,11 +169,11 @@
     "            self.changePoints = np.array([pt for c in self.changeContours for d in c for pt in d], dtype=\"float32\")\n",
     "            xS = [pt[0] for pt in self.changePoints]\n",
     "            yS = [pt[1] for pt in self.changePoints]\n",
-    "            minX = min(xS)\n",
-    "            minY = min(yS)\n",
+    "            minX = max(min(xS) - 5, 0)\n",
+    "            minY = max(min(yS) - 5, 0)\n",
     "            self.corner = [minX, minY]\n",
-    "            self.width = max(xS) - minX\n",
-    "            self.height = max(yS) - minY\n",
+    "            self.width = min(max(xS) - minX + 5, 1920)\n",
+    "            self.height = min(max(yS) - minY + 5, 1080)\n",
     "            self.clipBox = [int(i) for i in (minX, minY, self.width, self.height)]\n",
     "            self.center = [min(xS) + int(self.width / 2), min(yS) + int(self.height / 2)]\n",
     "            self.before_full = self.before\n",
@@ -482,19 +482,21 @@
     "        return \\\n",
     "            sum([notNoneChanges[camName] == other.changeSet[camName] for camName in notNoneChanges.keys()]) / len(notNoneChanges) >= 0.3\n",
     "\n",
-    "    def visual(self, withContours=True):\n",
+    "    def visual(self, withContours=True, margin=0):\n",
     "        images = [change.after for change in self.changeSet.values() if change.changeType not in [\"delete\", None]]\n",
-    "        maxHeight =  max([im.shape[0] for im in images])\n",
+    "        maxHeight =  max([im.shape[0] + margin * 2 for im in images])\n",
     "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
     "    \n",
+    "        margins = [-margin, -margin, margin * 2, margin * 2]\n",
+    "    \n",
     "        if withContours:\n",
-    "            images = [clipImage(cv2.drawContours(cameras[camName].mostRecentFrame.copy(), change.changeContours, -1, (255, 0, 0), -1), change.clipBox)\n",
+    "            images = [clipImage(cv2.drawContours(cameras[camName].mostRecentFrame.copy(), change.changeContours, -1, (255, 0, 0), -1), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
     "                      if change.changeType != \"delete\" else filler\n",
     "                      for camName, change in self.changeSet.items()]\n",
     "        else:\n",
-    "            images = [change.after\n",
+    "            images = [clipImage(cameras[camName].mostRecentFrame.copy(), [dim + m for dim, m in zip(change.clipBox, margins)])\n",
     "                      if change.changeType != \"delete\" else filler\n",
-    "                      for change in self.changeSet.values()]\n",
+    "                      for camName, change in self.changeSet.items()]\n",
     "            \n",
     "        maxHeight =  max([im.shape[0] for im in images])\n",
     "        filler = np.zeros((maxHeight, 50, 3), np.uint8)\n",
