Implement object footprint editor

--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -16,11 +16,11 @@
    "id": "2a17dcee-60c4-4f16-b21d-15cf46e5f597",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T02:44:08.882479Z",
-     "iopub.status.busy": "2024-11-19T02:44:08.882049Z",
-     "iopub.status.idle": "2024-11-19T02:44:09.536824Z",
-     "shell.execute_reply": "2024-11-19T02:44:09.536212Z",
-     "shell.execute_reply.started": "2024-11-19T02:44:08.882432Z"
+     "iopub.execute_input": "2024-11-21T01:23:11.952150Z",
+     "iopub.status.busy": "2024-11-21T01:23:11.951453Z",
+     "iopub.status.idle": "2024-11-21T01:23:12.622337Z",
+     "shell.execute_reply": "2024-11-21T01:23:12.621464Z",
+     "shell.execute_reply.started": "2024-11-21T01:23:11.952104Z"
     },
     "tags": []
    },
@@ -48,11 +48,11 @@
    "id": "ae0fc0e2-68b4-445c-a132-c3d033ceeb8d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T02:44:09.537687Z",
-     "iopub.status.busy": "2024-11-19T02:44:09.537369Z",
-     "iopub.status.idle": "2024-11-19T02:44:09.567340Z",
-     "shell.execute_reply": "2024-11-19T02:44:09.563010Z",
-     "shell.execute_reply.started": "2024-11-19T02:44:09.537666Z"
+     "iopub.execute_input": "2024-11-21T01:23:12.623812Z",
+     "iopub.status.busy": "2024-11-21T01:23:12.623181Z",
+     "iopub.status.idle": "2024-11-21T01:23:12.644480Z",
+     "shell.execute_reply": "2024-11-21T01:23:12.643006Z",
+     "shell.execute_reply.started": "2024-11-21T01:23:12.623770Z"
     },
     "tags": []
    },
@@ -136,11 +136,11 @@
    "id": "0746d996-7e39-43e0-87c3-ac76ef2effbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T02:44:09.572326Z",
-     "iopub.status.busy": "2024-11-19T02:44:09.571299Z",
-     "iopub.status.idle": "2024-11-19T02:44:09.600601Z",
-     "shell.execute_reply": "2024-11-19T02:44:09.599655Z",
-     "shell.execute_reply.started": "2024-11-19T02:44:09.572267Z"
+     "iopub.execute_input": "2024-11-21T01:23:12.647426Z",
+     "iopub.status.busy": "2024-11-21T01:23:12.646772Z",
+     "iopub.status.idle": "2024-11-21T01:23:12.676527Z",
+     "shell.execute_reply": "2024-11-21T01:23:12.675699Z",
+     "shell.execute_reply.started": "2024-11-21T01:23:12.647378Z"
     },
     "tags": []
    },
@@ -162,6 +162,7 @@
     "            self.height = None\n",
     "            self.center = None\n",
     "            self.before_full = None\n",
+    "            self.after_full = None\n",
     "            self.before = None\n",
     "            self.after = None\n",
     "        else:\n",
@@ -177,9 +178,26 @@
     "            self.clipBox = [int(i) for i in (minX, minY, self.width, self.height)]\n",
     "            self.center = [min(xS) + int(self.width / 2), min(yS) + int(self.height / 2)]\n",
     "            self.before_full = self.before\n",
+    "            self.after_full = self.after\n",
     "            self.before = clipImage(self.before, self.clipBox)\n",
     "            self.after = clipImage(self.after, self.clipBox)\n",
-    "    \n",
+    "\n",
+    "    def overrideChangeContours(self, newContours):\n",
+    "        self.changeContours = newContours\n",
+    "        self.area = max([cv2.contourArea(c) for c in self.changeContours])\n",
+    "        self.changePoints = np.array([pt for c in self.changeContours for d in c for pt in d], dtype=\"float32\")\n",
+    "        xS = [pt[0] for pt in self.changePoints]\n",
+    "        yS = [pt[1] for pt in self.changePoints]\n",
+    "        minX = max(min(xS) - 5, 0)\n",
+    "        minY = max(min(yS) - 5, 0)\n",
+    "        self.corner = [minX, minY]\n",
+    "        self.width = min(max(xS) - minX + 5, 1920)\n",
+    "        self.height = min(max(yS) - minY + 5, 1080)\n",
+    "        self.clipBox = [int(i) for i in (minX, minY, self.width, self.height)]\n",
+    "        self.center = [min(xS) + int(self.width / 2), min(yS) + int(self.height / 2)]\n",
+    "        self.before = clipImage(self.before_full, self.clipBox)\n",
+    "        self.after = clipImage(self.after_full, self.clipBox)\n",
+    "\n",
     "    def classify(self, changeType: str, lastChange: object=None):\n",
     "        assert self.changeType is not None, \"Unable to classify null ChangeType\"\n",
     "        assert changeType in [\"add\", \"move\", \"delete\", \"unclassified\"]\n",
@@ -228,11 +246,11 @@
    "id": "213cb2d2-24c4-40a6-981e-9cc14e4238ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T02:44:09.601856Z",
-     "iopub.status.busy": "2024-11-19T02:44:09.601536Z",
-     "iopub.status.idle": "2024-11-19T02:44:09.635338Z",
-     "shell.execute_reply": "2024-11-19T02:44:09.634670Z",
-     "shell.execute_reply.started": "2024-11-19T02:44:09.601829Z"
+     "iopub.execute_input": "2024-11-21T01:23:12.677674Z",
+     "iopub.status.busy": "2024-11-21T01:23:12.677359Z",
+     "iopub.status.idle": "2024-11-21T01:23:12.717123Z",
+     "shell.execute_reply": "2024-11-21T01:23:12.715636Z",
+     "shell.execute_reply.started": "2024-11-21T01:23:12.677646Z"
     },
     "tags": []
    },
