Implement undo button

--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -933,10 +933,10 @@
     "    \n",
     "    def getCameraImagesWithChanges(self, cameraKeys=None):\n",
     "        if cameraKeys is None:\n",
-    "            cameras = self.cc.cameras.keys()\n",
+    "            cameraKeys = self.cc.cameras.keys()\n",
     "\n",
     "        images = {}\n",
-    "        for camName in cameras:\n",
+    "        for camName in cameraKeys:\n",
     "            cam = self.cc.cameras[camName]\n",
     "            camImage = cam.cropToActiveZone(cam.mostRecentFrame.copy())\n",
     "            \n",
@@ -957,6 +957,7 @@
     "                if lastClass is not None and lastClass.changeType not in ['delete', None]:\n",
     "                    lastClassContour = np.array([lastClass.changePoints], dtype=np.int32)\n",
     "                    camImage = cv2.drawContours(camImage, lastClassContour, -1 , (0, 255, 0), -1)\n",
+    "            camImage = cv2.resize(camImage, [480, 640], interpolation=cv2.INTER_AREA)\n",
     "            images[camName] = camImage\n",
     "        return images\n",
     "            \n",
@@ -1121,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d317e5-4691-4b04-9e90-c4ad3ad1a6b0",
+   "id": "aa69133b-dcb8-4452-8e7f-5f75c24c4bdc",
    "metadata": {},
    "outputs": [],
    "source": []
