Updates to System initialization

--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b1df8dfb-e721-4372-b172-be04d0663b56",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-24T03:02:02.316829Z",
+     "iopub.status.busy": "2024-11-24T03:02:02.316630Z",
+     "iopub.status.idle": "2024-11-24T03:02:02.344893Z",
+     "shell.execute_reply": "2024-11-24T03:02:02.343911Z",
+     "shell.execute_reply.started": "2024-11-24T03:02:02.316806Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from random import randint\n",
@@ -23,7 +31,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "d8ebbaed-e6eb-4ab2-b1f7-c99c6e792596",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-24T03:02:02.345998Z",
+     "iopub.status.busy": "2024-11-24T03:02:02.345633Z",
+     "iopub.status.idle": "2024-11-24T03:02:02.355445Z",
+     "shell.execute_reply": "2024-11-24T03:02:02.354498Z",
+     "shell.execute_reply.started": "2024-11-24T03:02:02.345967Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def all_subclasses(cls):\n",
@@ -35,7 +51,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "c8e8767c-48a0-4210-806b-dfefeea5878e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-24T03:02:02.357880Z",
+     "iopub.status.busy": "2024-11-24T03:02:02.357322Z",
+     "iopub.status.idle": "2024-11-24T03:02:02.399209Z",
+     "shell.execute_reply": "2024-11-24T03:02:02.398484Z",
+     "shell.execute_reply.started": "2024-11-24T03:02:02.357836Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class QuantumSystem:\n",
@@ -134,8 +158,18 @@
     "            [system.validate() for system in cls.systems]\n",
     "        \n",
     "        @classmethod\n",
-    "        def build_system(cls, anchor, terminants):\n",
-    "            for system, terminant in zip(cls.systems, terminants):\n",
+    "        def build_system(cls, anchor, terminants: list | dict):\n",
+    "            # print(f\"Building system: {cls} on {anchor} with {terminants}\")\n",
+    "            if isinstance(terminants, dict):\n",
+    "                try:\n",
+    "                    terminants = [(sys, terminants[sys.__name__]) for sys in cls.systems]\n",
+    "                except KeyError:\n",
+    "                    raise Exception(f\"Missing terminant for {sys.__name__}\")\n",
+    "            else:\n",
+    "                terminants = list(zip(cls.systems, terminants))\n",
+    "                if len(terminants) != len(cls.systems):\n",
+    "                    raise Exception(f\"Missing terminants for {[sys.__name__ for sys in cls.systems[len(terminants):]]}\")\n",
+    "            for system, terminant in terminants:\n",
     "                system.build_system(anchor, terminant)\n",
     "            return anchor\n",
     "    \n",
@@ -152,11 +186,25 @@
     "        @classmethod\n",
     "        def get_edge_names(cls):\n",
     "            return [system.get_edge_name() for system in cls.systems]\n",
+    "\n",
+    "        @classmethod\n",
+    "        def meta_anchor(cls, anchor):\n",
+    "            return f\"{anchor}-{cls.__name__}\"  \n",
     "        \n",
     "        @classmethod\n",
     "        def build_system(cls, anchor, terminants):\n",
-    "            meta_anchor = f\"{anchor}-{cls.__name__}\"\n",
-    "            for system, terminant in zip(cls.systems, terminants):\n",
+    "            meta_anchor = cls.meta_anchor(anchor)\n",
+    "            if isinstance(terminants, dict):\n",
+    "                try:\n",
+    "                    terminants = [(sys, terminants[sys.__name__]) for sys in cls.systems]\n",
+    "                except KeyError:\n",
+    "                    raise Exception(f\"Missing terminant for {sys.__name__}\")\n",
+    "            else:\n",
+    "                terminants = list(zip(cls.systems, terminants))\n",
+    "                if len(terminants) != len(cls.systems):\n",
+    "                    raise Exception(f\"Missing terminants for {[sys.__name__ for sys in cls.systems[len(terminants):]]}\")\n",
+    "            \n",
+    "            for system, terminant in terminants:\n",
     "                system.build_system(meta_anchor, terminant)\n",
     "            QuantumSystem.add_entity(anchor, **{cls.__name__: meta_anchor})\n",
     "            return anchor\n",
@@ -174,7 +222,10 @@
     "    @classmethod\n",
     "    def add_entity(cls, entity_id, **relationships):\n",
     "        for rel_name, rel_value in relationships.items():\n",
-    "            cls.graph.put(entity_id, rel_name, rel_value)\n",
+    "            try:\n",
+    "                cls.graph.put(entity_id, rel_name, rel_value)\n",
+    "            except Exception as e:\n",
+    "                raise Exception(f\"Failed to create entity: {entity_id}, {rel_name}, {rel_value}\") from e\n",
     "    \n",
     "    @classmethod\n",
     "    def entity_exists(cls, entity_id):\n",
@@ -286,6 +337,14 @@
     "        return Image(f'{cls.quantum_system_name}.png')\n",
     "qs = QuantumSystem"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d27d0ea-8105-4b1a-a6a6-baa3c096681c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -304,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
