--- a/harmony/dma/quantumsystem.ipynb
+++ b/harmony/dma/quantumsystem.ipynb
@@ -207,7 +207,7 @@
     "            for system, terminant in terminants:\n",
     "                system.build_system(meta_anchor, terminant)\n",
     "            QuantumSystem.add_entity(anchor, **{cls.__name__: meta_anchor})\n",
-    "            return anchor\n",
+    "            return meta_anchor\n",
     "\n",
     "    @classmethod\n",
     "    def reset(cls):\n",
@@ -225,7 +225,12 @@
     "            try:\n",
     "                cls.graph.put(entity_id, rel_name, rel_value)\n",
     "            except Exception as e:\n",
-    "                raise Exception(f\"Failed to create entity: {entity_id}, {rel_name}, {rel_value}\") from e\n",
+    "                print(f\"Failed to create entity: {entity_id}, {rel_name}, {rel_value}\")\n",
+    "                print(f\"Exception: {e}\")\n",
+    "                print(type(entity_id))\n",
+    "                print(type(rel_name))\n",
+    "                print(type(rel_value))\n",
+    "                raise\n",
     "    \n",
     "    @classmethod\n",
     "    def entity_exists(cls, entity_id):\n",
