--- a/harmony/observer/CalibratedObserver.ipynb
+++ b/harmony/observer/CalibratedObserver.ipynb
@@ -248,6 +248,9 @@
     "class CalibrationObserver(Observer):\n",
     "    def __init__(self, config: CaptureConfiguration):\n",
     "        super().__init__(config)\n",
+    "\n",
+    "    def reset(self):\n",
+    "        super().reset()\n",
     "        self.dowel_position = None\n",
     "        self.calibrated = False\n",
     "        self.realSpaceContours = None\n",
